--- a/main.html
+++ b/main.html
@@ -8,10 +8,8 @@
 
 <body>
 	<h1>Time, Space, and Complexity</h1>
-	<p>Time Complexity is a measure of how the runtime of an algorithm increases with the size of the input. 
-        Efficient algorithms are those with lower time complexity, enabling faster execution especially on large data sets.</p>
-	<p><b>Space Complexity</b> refers to the amount of memory an algorithm uses relative to the input size. 
-        It is often expressed in terms of O(n), indicating that the memory usage grows linearly with the size of the input.</p>
+	<p>Time complexity, efficient</p>
+	<p><b>Space Complexity</b>, O(n)</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
